--- a/static/style.css
+++ b/static/style.css
@@ -2,3 +2,13 @@ body {
   font-family: "helvetica", sans-serif;
   text-align: center;
 }
+
+table{
+  width:70%;
+  margin-left:auto; 
+  margin-right:auto;
+}
+
+th, td {
+  border-bottom: 1px solid #ddd;
+}
